force-app/main/default/objects/Dynamo_Stream_Shadow__c/Dynamo_Stream_Shadow__c.object-meta.xml
<CustomObject>
    <label>Dynamo Stream</label>
    <nameField>
        <label>Dynamo Stream Shadow Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamo Stream</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>