force-app/main/default/objects/Dynamo_Stream_Shadow__c/fields/Batch_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Batch_Identifier__c</fullName>
    <label>Batch Identifier</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>