force-app/main/default/objects/Dynamo_Stream_Shadow__c/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <label>Event Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>