force-app/main/default/objects/Dynamo_Stream_Shadow__c/fields/SFDC_Error__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Error__c</fullName>
    <label>SFDC Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>